--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -28,10 +28,8 @@ jobs:
       run: yarn global add moleculer-cli
     - name: Make target directory
       run: mkdir ./target
-    - name: init
-      run: yarn init -y
     - name: Install dependencies
-      run: yarn add jest exeq rimraf
+      run: yarn
     - name: Run tests
-      run: ./node_modules/.bin/jest --testMatch '<rootDir>/unit/*.spec.js' --no-cache --config ./test/jest.config.js
+      run: jest --testMatch '<rootDir>/unit/*.spec.js' --no-cache --config ./test/jest.config.js
 
