--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -32,5 +32,5 @@ jobs:
     - name: Install dependencies
       run: yarn
     - name: Run tests
-      run: yarn test
+      run: ./node_modules/.bin/jest ./test --config ./test/jest.config.js
 
