--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest]
-        node-version: [10.x, 12.x]
+        node-version: [10.x, 12.x, 13.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -32,5 +32,5 @@ jobs:
     - name: Install dependencies
       run: yarn
     - name: Run tests
-      run: ./node_modules/.bin/jest ./test --config ./test/jest.config.js
+      run: yarn jest
 
