--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   },
   "scripts": {
     "test": "jest --testMatch '<rootDir>/unit/*.spec.js' --no-cache --config ./test/jest.config.js"
+  },
+  "dependencies": {
+    "moleculer-cli": "^0.7.0"
   }
 }
