--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,20 +25,23 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Cache Node.js modules
-      uses: actions/cache@v1
-      with:
-        path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
-        key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.OS }}-node-
-          ${{ runner.OS }}-
-    - name: Install moleculer-cli
-      run: yarn global add moleculer-cli
+    # - name: Cache Node.js modules
+    #   uses: actions/cache@v1
+    #   with:
+    #     path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
+    #     key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
+    #     restore-keys: |
+    #       ${{ runner.OS }}-node-
+    #       ${{ runner.OS }}-
+    # - name: Install moleculer-cli
+    #   run: yarn global add moleculer-cli
     - name: Make target directory
       run: mkdir ./target
-    - name: Install dependencies
-      run: yarn
+    # - name: Install dependencies
+    #   run: yarn
     - name: Run tests
-      run: ./node_modules/.bin/jest --testMatch '<rootDir>/unit/*.spec.js' --config test/jest.config.js
+      run: |
+        yarn global add moleculer-cli
+        yarn install
+        ./node_modules/.bin/jest --testMatch '<rootDir>/unit/*.spec.js' --config test/jest.config.js
 
