--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -42,14 +42,16 @@ jobs:
     - name: Run tests
       run: ./node_modules/.bin/jest --testMatch '<rootDir>/unit/*.spec.js' --config test/jest.config.js
     - name: New project
-      run: moleculer init .. t1 --no-install -a ../test/fixtures/answers/all.json
+      run: |
+        moleculer init .. t1 --no-install -a ../test/fixtures/answers/all.json
+        cd ./t1 && yarn
       if: runner.os == 'Windows'
       working-directory: ./target
-    - name: yarn install
-      run: yarn
-      if: runner.os == 'Windows'
-      working-directory: ./target/t1
-    - name: jest
-      run: ./node_modules/.bin/jest --testMatch '<rootDir>/unit/*.spec.js' --config test/jest.config.js
-      if: runner.os == 'Windows'
-      working-directory: ./target/t1
+    # - name: yarn install
+    #   run: yarn
+    #   if: runner.os == 'Windows'
+    #   working-directory: ./target/t1
+    # - name: jest
+    #   run: ./node_modules/.bin/jest --testMatch '<rootDir>/unit/*.spec.js' --config test/jest.config.js
+    #   if: runner.os == 'Windows'
+    #   working-directory: ./target/t1
