--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -44,7 +44,9 @@ jobs:
     - name: New project
       run: |
         moleculer init .. t1 --no-install -a ../test/fixtures/answers/all.json
-        cd ./t1 && yarn
+        cd ./t1
+        yarn
+        ./node_modules/.bin/jest --testMatch '<rootDir>/unit/*.spec.js' --config test/jest.config.js
       if: runner.os == 'Windows'
       working-directory: ./target
     # - name: yarn install
