--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -45,7 +45,7 @@ jobs:
       run: |
         moleculer init .. t1 --install -a ../test/fixtures/answers/all.json
         cd ./t1
-        ./node_modules/.bin/jest --testMatch '<rootDir>/unit/*.spec.js' --config test/jest.config.js
+        ./node_modules/.bin/jest --testMatch '<rootDir>/unit/*.spec.js' --config ../jest.config.js
       if: runner.os == 'Windows'
       working-directory: ./target
     # - name: yarn install
