--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -41,13 +41,14 @@ jobs:
       run: npm install
     - name: Run tests
       run: ./node_modules/.bin/jest --testMatch '<rootDir>/src/*.spec.js' --config test/jest.config.js
-    - name: New project
-      run: |
-        moleculer init .. t1 --install -a ../test/fixtures/answers/all.json
-        cd ./t1
-        ./node_modules/.bin/jest --testMatch '<rootDir>/test/unit/**/*.spec.ts' --config jest.config.js
+    - name: init project
+      run: moleculer init .. t1 --install -a ../test/fixtures/answers/all.json
       if: matrix.node-version != '10.x'
       working-directory: ./target
+    - name: Run tests
+      run: ./node_modules/.bin/jest --testMatch '<rootDir>/test/unit/**/*.spec.ts' --config jest.config.js
+      if: matrix.node-version != '10.x'
+      working-directory: ./target/t1
     # - name: yarn install
     #   run: yarn
     #   if: runner.os == 'Windows'
