change jest path

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -50,7 +50,7 @@ jobs:
       if: matrix.node-version != '10.x'
       working-directory: ./target/t1
     - name: Run tests
-      run: ./node_modules/.bin/jest --testMatch '<rootDir>/test/unit/**/*.spec.ts' --config jest.config.js
+      run: ./node_modules/jest/bin/jest --testMatch '<rootDir>/test/unit/**/*.spec.ts' --config jest.config.js
       if: matrix.node-version != '10.x'
       working-directory: ./target/t1
     # - name: yarn install
