--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -49,8 +49,12 @@ jobs:
       run: yarn install
       if: matrix.node-version != '10.x'
       working-directory: ./target/t1
+    - name: list directories
+      run: ls -la ./target/t1
+      if: matrix.node-version != '10.x'
+      working-directory: ./target/t1
     - name: Run tests
-      run: ./node_modules/jest/bin/jest --testMatch '<rootDir>/test/unit/**/*.spec.ts' --config jest.config.js
+      run: ./node_modules/.bin/jest --testMatch '<rootDir>/test/unit/**/*.spec.ts' --config jest.config.js
       if: matrix.node-version != '10.x'
       working-directory: ./target/t1
     # - name: yarn install
